# sample-idle-resource-remediator-using-bedrock-agentcore

./: .gitignore  CONTRIBUTING.md  DEVELOPING.md  README.md  SECURITY.md  brazil.ion  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.kiro/agents/: idle-resource-remediator.json
.kiro/context/idle-resource-remediator/: prompt.md
.threatmodel/: idle-resource-remediator-threat-model.json  idle-resource-remediator-threat-model.md
diagrams/: .$architecture-diagram.drawio.bkp  .$dataflow-diagram.drawio.bkp  .$sequence-diagram.drawio.bkp  architecture-diagram.drawio  dataflow-diagram.drawio  sequence-diagram.drawio
requirements/: requirements-build-tools.txt  requirements-hatch-build.txt  requirements-hatch-test.py3.11.txt  requirements-hatch-test.py3.12.txt
src/: agent.py  mcp_server.py
tests/: test_delete_me.py  test_mcp_server.py
